<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="130sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_title"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <RadioGroup
            android:id="@+id/rg_rom"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_below="@+id/img_logo"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/stock"
                android:textSize="30sp" />

            <RadioButton
                android:id="@+id/rb_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/custom"
                android:textSize="30sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_below="@+id/rg_rom"
            android:background="#00ff00"
            android:text="@string/start"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_below="@+id/rg_rom"
            android:background="#ff0000"
            android:text="@string/stop"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>